...
                                        <rect key="frame" x="0.0" y="113.5" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4nP-rH-Yfx" id="SaW-cQ-SGg">
                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Using Storyborad or Xib" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="af6-Os-0dM">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                        <rect key="frame" x="0.0" y="157.5" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RlS-cd-vN8" id="eMj-Di-rln">
                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Using Programmatically" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aQg-mZ-Dt5">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                        <connections>
                            <outlet property="dataSource" destination="XTx-Bf-qJf" id="r7a-8H-paB"/>
                            <outlet property="delegate" destination="XTx-Bf-qJf" id="Xwd-bE-uxs"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="AutoLayout Examples" id="xqS-pI-LkL">
                        <barButtonItem key="backBarButtonItem" title="Home" id="icz-VM-WPw"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="vc6-ow-RXY" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="930" y="999"/>
        </scene>
...
                            <constraint firstItem="ot1-9R-ys4" firstAttribute="top" secondItem="lun-9u-S1M" secondAttribute="bottom" constant="20" id="e1N-EL-obX"/>
                            <constraint firstItem="plL-bX-nhL" firstAttribute="top" secondItem="DbR-pe-xfK" secondAttribute="bottom" constant="20" id="eEF-6N-AXV"/>
                            <constraint firstItem="Hx2-im-p62" firstAttribute="top" secondItem="DbR-pe-xfK" secondAttribute="bottom" constant="20" id="em8-Q7-e4X"/>
                            <constraint firstItem="rGR-Gx-4hQ" firstAttribute="leading" secondItem="GeS-RE-V81" secondAttribute="leadingMargin" id="uvI-EQ-8aN"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Storyboard or Xib" id="h5w-yw-nhd"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="YeB-Ya-yPg" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1752" y="999"/>
        </scene>
        <!--Programmatically-->
...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Yey-II-mZT">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Programmatically" id="4W5-8L-FcQ"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="rAQ-Ze-n4T" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1752" y="1804"/>
        </scene>
    </scenes>
...
